# casadi_python_cpp

./: .gitignore  CMakeLists.txt  gen.c  gen.h  main.cpp  main.py
